ml model creation with knn algorithm

--- a/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f91b3669",
+   "id": "fb7b1337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c947209",
+   "id": "b0cc9b4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f3dc16",
+   "id": "796d9774",
    "metadata": {},
    "source": [
     "The iris object that is returned by load_iris is a Bunch object, which is very similar\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "91ea4b01",
+   "id": "d9734fc2",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf0de93",
+   "id": "aa6f9367",
    "metadata": {},
    "source": [
     "The value of the key DESCR is a short description of the dataset. "
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "467e101a",
+   "id": "dd4bb7bd",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cb21be",
+   "id": "01c579d4",
    "metadata": {},
    "source": [
     "The value of the key target_names is an array of strings, containing the species of\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f9043a26",
+   "id": "f51a1e40",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce60ddc",
+   "id": "07b6a992",
    "metadata": {},
    "source": [
     "The value of feature_names is a list of strings, giving the description of each feature:"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c726f443",
+   "id": "3517f59a",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96985742",
+   "id": "41c69b66",
    "metadata": {},
    "source": [
     "The data itself is contained in the target and data fields. data contains the numeric\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cf1f0469",
+   "id": "b4c497e6",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b98180d",
+   "id": "63fb4508",
    "metadata": {},
    "source": [
     "The rows in the data array correspond to flowers, while the columns represent the\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "61999db4",
+   "id": "38263638",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a115806",
+   "id": "b2a3e57e",
    "metadata": {},
    "source": [
     "We see that the array contains measurements for 150 different flowers. Remember\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "54b5bd06",
+   "id": "1bb1390d",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853c95b6",
+   "id": "206cedc0",
    "metadata": {},
    "source": [
     "From this data, we can see that all of the first five flowers have a petal width of 0.2 cm\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "16044bae",
+   "id": "b485a70c",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b7f293",
+   "id": "07633ad2",
    "metadata": {},
    "source": [
     "target is a one-dimensional array, with one entry per flower:"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b85d0391",
+   "id": "c836f62c",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b9dc55",
+   "id": "dee21fc3",
    "metadata": {},
    "source": [
     "The species are encoded as integers from 0 to 2:"
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "207cc310",
+   "id": "fec916a2",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412534fb",
+   "id": "83aabb2b",
    "metadata": {},
    "source": [
     "The meanings of the numbers are given by the iris['target_names'] array:\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43646de0",
+   "id": "59975c7d",
    "metadata": {},
    "source": [
     "### Training and Testing Data"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "07e475d7",
+   "id": "8a34c295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0aeb4d3f",
+   "id": "57b0046e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cc236d71",
+   "id": "84bf00bd",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "abbd41a5",
+   "id": "90ae0525",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d183848",
+   "id": "2327705d",
    "metadata": {},
    "source": [
     "### Look at Your Data"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d1eb34",
+   "id": "013e3a93",
    "metadata": {},
    "source": [
     "Additionally, inspecting your data is a good way to find abnormalities and peculiari‐\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9ca9647e",
+   "id": "86f11dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4cd374f9",
+   "id": "05532aa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "295aadf7",
+   "id": "14483d70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e837a1cc",
+   "id": "25b01fdb",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "bf527cd3",
+   "id": "1f89d0b4",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d611ec",
+   "id": "31e01ce5",
    "metadata": {},
    "source": [
     "From the plots, we can see that the three classes seem to be relatively well separated\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98aea81",
+   "id": "104b50c3",
    "metadata": {},
    "source": [
     "### Building Your First Model: k-Nearest Neighbors"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9e65ab83",
+   "id": "6854ed39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ce927b84",
+   "id": "d8b0a5ce",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a868b92",
+   "id": "37e3eca8",
    "metadata": {},
    "source": [
     "### Making Predictions"
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d501bcb0",
+   "id": "2eccb559",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106274e5",
+   "id": "10fb8f57",
    "metadata": {},
    "source": [
     "Note that we made the measurements of this single flower into a row in a two\u0002dimensional NumPy array, as scikit-learn always expects two-dimensional arrays\n",
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f63f301a",
+   "id": "18bd9617",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9eb0cc",
+   "id": "e0127d80",
    "metadata": {},
    "source": [
     "Our model predicts that this new iris belongs to the class 0, meaning its species is\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2309b171",
+   "id": "aceaa354",
    "metadata": {},
    "source": [
     "### Evaluating the Model"
@@ -632,27 +632,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65bc6fdd",
+   "execution_count": 52,
+   "id": "61ac0391",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set predictions:\n",
+      " [2 1 0 2 0 2 0 1 1 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0 2 1 0 2 2 1 0\n",
+      " 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = knn.predict(X_test)\n",
+    "print(\"Test set predictions:\\n {}\".format(y_pred))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f337b2b",
+   "execution_count": 53,
+   "id": "8d7ee554",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set score: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test set score: {:.2f}\".format(np.mean(y_pred == y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2266af05",
+   "metadata": {},
+   "source": [
+    "We can also use the score method of the knn object, which will compute the test set\n",
+    "accuracy for us:\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef09bb13",
+   "execution_count": 54,
+   "id": "5a70ec6b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set score: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test set score: {:.2f}\".format(knn.score(X_test, y_test)))"
+   ]
   }
  ],
  "metadata": {
