--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9af6413d",
+   "id": "2b87a6a7",
    "metadata": {},
    "source": [
     "# CHAPTER 01 : INTRODUCTION"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b7a2a5",
+   "id": "12178a95",
    "metadata": {},
    "source": [
     "### Finding Key Connectors"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ef6be2e1",
+   "id": "17bf746f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30c7bd14",
+   "id": "f808078b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +50,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "39098339",
+   "id": "5a9a50c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "for user in users:\n",
-    "    user[\"friends\"] = [] # Within the loop, this line of code accesses the \"friends\" attribute of the current user (assuming it's a dictionary) and assigns it an empty list []."
+    "    user[\"friends\"] = [] # Within the loop, this line of code accesses the \"friends\" \n",
+    "                            #attribute of the current user (assuming it's a dictionary) and assigns it an empty list []."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc4a2116",
+   "id": "e126e687",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5d57ff7b",
+   "id": "dd876243",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "720aa068",
+   "id": "7e111caf",
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +104,12 @@
     }
    ],
    "source": [
-    "print(users)"
+    "## print(users)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65cd5b97",
+   "id": "e969e902",
    "metadata": {},
    "source": [
     "Ask questions, like “what’s the average number of connections?”\n"
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f24866",
+   "id": "5e4ef1ce",
    "metadata": {},
    "source": [
     "First we find the total number of connections, by summing up the lengths of all the\n",
@@ -126,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d8f393da",
+   "id": "00ac26a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af7ef3e1",
+   "id": "c88a034f",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5be17ae1",
+   "id": "a279acdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0a202fc7",
+   "id": "668b4f81",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a18cdab5",
+   "id": "beb94064",
    "metadata": {},
    "source": [
     "we can sort them from “most friends” to “least friends”:"
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "377278f8",
+   "id": "867af864",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3564d9fa",
+   "id": "8d82728c",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "da9f0c62",
+   "id": "17043381",
    "metadata": {},
    "source": [
     "![photo_2023-11-07_01-38-58.jpg](attachment:photo_2023-11-07_01-38-58.jpg)"
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f23cf89",
+   "id": "9a3269f4",
    "metadata": {},
    "source": [
     "Here, \n",
@@ -308,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f1ade7",
+   "id": "bcf7f3b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f20a412f",
+   "id": "9568a58a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -324,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa1c0d8",
+   "id": "4f4e08f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -332,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a7f96d",
+   "id": "13210bfd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -340,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4cbb5a1",
+   "id": "e0b96951",
    "metadata": {},
    "outputs": [],
    "source": []
