trying to find out the friends of friends connections

--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -300,10 +300,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3d07f8",
+   "id": "61346f3e",
    "metadata": {},
    "source": [
     "### Data Scientists You May Know"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93cfd7ae",
+   "metadata": {},
+   "source": [
+    "To make a People you may know suggester we need to find the connection between users. Like a user might know the firends of\n",
+    "friends. Such calculations can be made easily by following,"
    ]
   },
   {
@@ -314,9 +323,10 @@
    "outputs": [],
    "source": [
     "def friends_of_friends_ids_bad(user):\n",
+    "    # \"foaf\" is short form for \"friend of a friend\"\n",
     "    return [foaf[\"id\"]\n",
-    "           for friend in user[\"friends\"]\n",
-    "           for foaf in friend[\"friends\"]]"
+    "           for friend in user[\"friends\"]  # for each of user's friends\n",
+    "           for foaf in friend[\"friends\"]] # get each of_their_friends"
    ]
   },
   {
@@ -332,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f373f1ec",
+   "id": "c4c03c7a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -340,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71259ce0",
+   "id": "dbaf3a90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -348,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b2d39e7",
+   "id": "76f9ef4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -356,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ffa66b",
+   "id": "1e730a8f",
    "metadata": {},
    "outputs": [],
    "source": []
