--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "2d1c1b54",
    "metadata": {},
    "outputs": [],
@@ -39,64 +39,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "70648a0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "friendships = [(0, 1), (0, 2), (1, 2), (1, 3), (2, 3), (3, 4), (4, 5), (5, 6), (5, 7), (6, 8), (7, 8), (8, 9)]"
+    "friendship_pairs = [(0, 1), (0, 2), (1, 2), (1, 3), (2, 3), (3, 4), (4, 5), (5, 6), (5, 7), (6, 8), (7, 8), (8, 9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a8a764ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the dict with an empty list for each user id:\n",
+    "\n",
+    "friendships = {user[\"id\"]: [] for user in users}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f2f8e57b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: [], 1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: [], 8: [], 9: []}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "friendships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e05ae5b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And loop over the friendship pairs to populate it:\n",
+    "\n",
+    "for i, j in friendship_pairs:\n",
+    "    friendships[i].append(j) # Add j as a friend of user i\n",
+    "    friendships[j].append(i) # Add i as a friend of user j"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cda96685",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for user in users:\n",
-    "    user[\"friends\"] = [] # Within the loop, this line of code accesses the \"friends\" \n",
-    "                         # attribute of the current user (assuming it's a dictionary) and assigns it an empty list []."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5696d0bd",
+   "id": "b3166c0a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'id': 0, 'name': 'Hero', 'friends': []}, {'id': 1, 'name': 'Dunn', 'friends': []}, {'id': 2, 'name': 'Sue', 'friends': []}, {'id': 3, 'name': 'Chi', 'friends': []}, {'id': 4, 'name': 'Thor', 'friends': []}, {'id': 5, 'name': 'Clive', 'friends': []}, {'id': 6, 'name': 'Hicks', 'friends': []}, {'id': 7, 'name': 'Devin', 'friends': []}, {'id': 8, 'name': 'Kate', 'friends': []}, {'id': 9, 'name': 'Klein', 'friends': []}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{0: [1, 2],\n",
+       " 1: [0, 2, 3],\n",
+       " 2: [0, 1, 3],\n",
+       " 3: [1, 2, 4],\n",
+       " 4: [3, 5],\n",
+       " 5: [4, 6, 7],\n",
+       " 6: [5, 8],\n",
+       " 7: [5, 8],\n",
+       " 8: [6, 7, 9],\n",
+       " 9: [8]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(users)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "80f6dacd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, j in friendships:\n",
-    "    users[i][\"friends\"].append(users[j])\n",
-    "    users[j][\"friends\"].append(users[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "59edf13a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## print(users)"
+    "friendships"
    ]
   },
   {
@@ -118,22 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5b2de95f",
+   "execution_count": 7,
+   "id": "855c3a9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def number_of_friends(user):\n",
-    "    \"\"\"How many friends dose_user_have?\"\"\"\n",
-    "    return len(user[\"friends\"])\n",
-    "\n",
-    "total_connections = sum(number_of_friends(user) for user in users)"
+    "    '''How many friends dose_user_have'''\n",
+    "    \n",
+    "    user_id = user[\"id\"]\n",
+    "    friend_ids = friendships[user_id]\n",
+    "    return len(friend_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c97b477a",
+   "execution_count": 8,
+   "id": "f66c7e2b",
    "metadata": {},
    "outputs": [
     {
@@ -142,32 +168,28 @@
        "24"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "total_connections = sum(number_of_friends(user) for user in users)\n",
     "total_connections"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6922401e",
+   "cell_type": "markdown",
+   "id": "0f6de47a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# now divide by the number of users:\n",
-    "\n",
-    "num_users = len(users)\n",
-    "avg_connections = total_connections / num_users"
+    "And then we just divide by the number of users:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "eac3a6f6",
+   "execution_count": 9,
+   "id": "9fd3f2a9",
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +198,15 @@
        "2.4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "num_users = len(users)\n",
+    "avg_connections = total_connections / num_users\n",
+    "\n",
     "avg_connections"
    ]
   },
@@ -195,42 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6d82d8fc",
+   "execution_count": 12,
+   "id": "82af7a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 2),\n",
-       " (1, 3),\n",
-       " (2, 3),\n",
-       " (3, 3),\n",
-       " (4, 2),\n",
-       " (5, 3),\n",
-       " (6, 2),\n",
-       " (7, 2),\n",
-       " (8, 3),\n",
-       " (9, 1)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#create a list (user_id, number_of_friends)\n",
-    "num_friends_by_id = [(user[\"id\"], number_of_friends(user)) for user in users]\n",
-    "\n",
-    "\n",
-    "num_friends_by_id"
+    "# Create a list (user_id, number_of_friends).\n",
+    "num_friends_by_id = [(user[\"id\"], number_of_friends(user)) for user in users]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8bd42b1b",
+   "id": "5106a772",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,57 @@
     }
    ],
    "source": [
-    "sorted(num_friends_by_id, key=lambda user_id_num_friends: user_id_num_friends[1], reverse=True)"
+    "num_friends_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "11b4cbf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_friends_by_id.sort(key=lambda id_and_friends: id_and_friends[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0e9c683c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 3),\n",
+       " (2, 3),\n",
+       " (3, 3),\n",
+       " (5, 3),\n",
+       " (8, 3),\n",
+       " (0, 2),\n",
+       " (4, 2),\n",
+       " (6, 2),\n",
+       " (7, 2),\n",
+       " (9, 1)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_friends_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78de073a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Figure 1-2. The DataSciencester network sized by degree"
    ]
   },
   {
@@ -300,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61346f3e",
+   "id": "ff520d32",
    "metadata": {},
    "source": [
     "### Data Scientists You May Know"
@@ -308,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93cfd7ae",
+   "id": "cd77c68c",
    "metadata": {},
    "source": [
     "To make a People you may know suggester we need to find the connection between users. Like a user might know the firends of\n",
@@ -342,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c03c7a",
+   "id": "8786f8a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -350,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbaf3a90",
+   "id": "567051c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -358,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f9ef4c",
+   "id": "f120bf02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -366,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e730a8f",
+   "id": "e85ab445",
    "metadata": {},
    "outputs": [],
    "source": []
