interest list and finding out the connecting data from it

--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2d1c1b54",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "70648a0c",
    "metadata": {},
    "outputs": [],
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a8a764ea",
+   "execution_count": 5,
+   "id": "9097af2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f2f8e57b",
+   "execution_count": 6,
+   "id": "6fb4ec70",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "{0: [], 1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: [], 8: [], 9: []}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e05ae5b2",
+   "execution_count": 7,
+   "id": "c131dd45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b3166c0a",
+   "execution_count": 8,
+   "id": "53a08fdb",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        " 9: [8]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "855c3a9a",
+   "execution_count": 9,
+   "id": "9b95d74e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f66c7e2b",
+   "execution_count": 10,
+   "id": "c83ea3ef",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "24"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6de47a",
+   "id": "6adc0a89",
    "metadata": {},
    "source": [
     "And then we just divide by the number of users:"
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9fd3f2a9",
+   "execution_count": 11,
+   "id": "ea85f439",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "2.4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "82af7a3c",
+   "id": "984fcc34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +231,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "6abca418",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 2),\n",
+       " (1, 3),\n",
+       " (2, 3),\n",
+       " (3, 3),\n",
+       " (4, 2),\n",
+       " (5, 3),\n",
+       " (6, 2),\n",
+       " (7, 2),\n",
+       " (8, 3),\n",
+       " (9, 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_friends_by_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "324cbfc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_friends_by_id.sort(key=lambda id_and_friends: id_and_friends[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
-   "id": "5106a772",
+   "id": "34ab9994",
    "metadata": {},
    "outputs": [
     {
@@ -257,56 +297,6 @@
    ],
    "source": [
     "num_friends_by_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "11b4cbf5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_friends_by_id.sort(key=lambda id_and_friends: id_and_friends[1], reverse = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0e9c683c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 3),\n",
-       " (2, 3),\n",
-       " (3, 3),\n",
-       " (5, 3),\n",
-       " (8, 3),\n",
-       " (0, 2),\n",
-       " (4, 2),\n",
-       " (6, 2),\n",
-       " (7, 2),\n",
-       " (9, 1)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_friends_by_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78de073a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Figure 1-2. The DataSciencester network sized by degree"
    ]
   },
   {
@@ -352,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff520d32",
+   "id": "40005d4e",
    "metadata": {},
    "source": [
     "### Data Scientists You May Know"
@@ -360,10 +350,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd77c68c",
+   "id": "bf2fee00",
    "metadata": {},
    "source": [
-    "To make a People you may know suggester we need to find the connection between users. Like a user might know the firends of\n",
+    "To make a \"People you may know\" suggester we need to find the connection between users. Like a user might know the firends of\n",
     "friends. Such calculations can be made easily by following,"
    ]
   },
@@ -374,27 +364,276 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def friends_of_friends_ids_bad(user):\n",
-    "    # \"foaf\" is short form for \"friend of a friend\"\n",
-    "    return [foaf[\"id\"]\n",
-    "           for friend in user[\"friends\"]  # for each of user's friends\n",
-    "           for foaf in friend[\"friends\"]] # get each of_their_friends"
+    "def foaf_ids_bad(user):\n",
+    "    return [foaf_id\n",
+    "           for friend_id in friendships[user[\"id\"]]\n",
+    "           for foaf_id in friendships[friend_id]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3df69fed",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 0, 'name': 'Hero'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "147d9415",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 3, 0, 1, 3]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foaf_ids_bad(users[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0684b75d",
+   "metadata": {},
+   "source": [
+    "It includes user 0 twice, since Hero is indeed friends with both of his\n",
+    "friends. It includes users 1 and 2, although they are both friends with Hero\n",
+    "already. And it includes user 3 twice, as Chi is reachable through two\n",
+    "different friends:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fe739481",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[0, 2, 3]\n",
+      "[0, 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(friendships[0])\n",
+    "print(friendships[1])\n",
+    "print(friendships[2]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c64e4507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "013a4c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0: 2, 5: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "def friends_of_friends(user):\n",
+    "    user_id = user[\"id\"]\n",
+    "    return Counter(\n",
+    "    foaf_id\n",
+    "    for friend_id in friendships[user_id] # For each of my friends\n",
+    "    for foaf_id in friendships[friend_id] # find their friends \n",
+    "    if foaf_id != user_id # who aren't me\n",
+    "    and foaf_id not in friendships[user_id]) # and aren't my friends\n",
+    "\n",
+    "print(friends_of_friends(users[3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5bc7ee1",
+   "metadata": {},
+   "source": [
+    "This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\n",
+    "0) but only one mutual friend with Clive (id 5).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fab0be0",
+   "metadata": {},
+   "source": [
+    "### “substantive expertise”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "15588fbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interests = [\n",
+    "        (0, \"Hadoop\"), (0, \"Big Data\"), (0, \"HBase\"), (0, \"Java\"),(0, \"Spark\"), (0, \"Storm\"), (0, \"Cassandra\"),\n",
+    "        (1, \"NoSQL\"), (1, \"MongoDB\"), (1, \"Cassandra\"), (1, \"HBase\"),(1, \"Postgres\"),\n",
+    "        (2, \"Python\"), (2, \"scikit-learn\"), (2, \"scipy\"),(2, \"numpy\"), (2, \"statsmodels\"), (2, \"pandas\"),\n",
+    "        (3, \"R\"), (3, \"Python\"),(3, \"statistics\"), (3, \"regression\"), (3, \"probability\"),    \n",
+    "        (4, \"machine learning\"), (4, \"regression\"), (4, \"decision trees\"),(4, \"libsvm\"),\n",
+    "        (5, \"Python\"), (5, \"R\"), (5, \"Java\"), (5, \"C++\"),(5, \"Haskell\"), (5, \"programming languages\"),\n",
+    "        (6, \"statistics\"),(6, \"probability\"), (6, \"mathematics\"), (6, \"theory\"),\n",
+    "        (7, \"machine learning\"), (7, \"scikit-learn\"), (7, \"Mahout\"),(7, \"neural networks\"),\n",
+    "        (8, \"neural networks\"), (8, \"deep learning\"),(8, \"Big Data\"), (8, \"artificial intelligence\"),\n",
+    "        (9, \"Hadoop\"),(9, \"Java\"), (9, \"MapReduce\"), (9, \"Big Data\")\n",
+    "        ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d468b38e",
+   "metadata": {},
+   "source": [
+    "function that finds users with a certain interest:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "496ddb21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_scientists_who_like(target_interest):\n",
+    "    \"\"\"Find the ids of all users who like the target interest\"\"\"\n",
+    "    return [user_id\n",
+    "           for user_id, user_interest in interests\n",
+    "           if user_interest == targeet_interest]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add43d51",
+   "metadata": {},
+   "source": [
+    "This works, but it has to examine the whole list of interests for every\n",
+    "search. If we have a lot of users and interests (or if we just want to do a lot\n",
+    "of searches), we’re probably better off building an index from interests to\n",
+    "users:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "58f65696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "36848d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keys are interests, values are lists of users_ids with that interest\n",
+    "\n",
+    "user_ids_by_interest = defaultdict(list)\n",
+    "\n",
+    "for user_id, interest in interests:\n",
+    "    user_ids_by_interest[interest].append(user_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce236a46",
+   "metadata": {},
+   "source": [
+    "And another from users to interests:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "10814f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keys are user_ids, values are lists of interests for that user_id.\n",
+    "interests_by_user_id = defaultdict(list)\n",
+    "\n",
+    "for user_id, interest in interests:\n",
+    "    interests_by_user_id[user_id].append(interest)# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7690ea1c",
+   "metadata": {},
+   "source": [
+    "Now it’s easy to find who has the most interests in common with a given\n",
+    "user:\n",
+    "- Iterate over the user’s interests.\n",
+    "- For each interest, iterate over the other users with that interest.\n",
+    "- Keep count of how many times we see each other user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ee4ccb23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def most_common_interests_with(user):\n",
+    "    return Counter(\n",
+    "        interested_user_id\n",
+    "        for interest in interests_by_user_id[user[\"id\"]]\n",
+    "        for interested_user_id in user_ids_by_interest[interest]\n",
+    "        if interested_user_id != user[\"id\"]\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3df69fed",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8786f8a4",
+   "id": "111983cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -402,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567051c0",
+   "id": "155bbd42",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -410,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f120bf02",
+   "id": "f43b64db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -418,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e85ab445",
+   "id": "9749f916",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -426,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013a4c17",
+   "id": "855aa3fa",
    "metadata": {},
    "outputs": [],
    "source": []
