--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f53d710b",
+   "id": "93d198cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8527fb10",
+   "id": "23abbb74",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "47ae61bd",
+   "id": "3e9d177d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f175565c",
+   "id": "fd9642b6",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8662ba58",
+   "id": "b0c74f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a08cd6d",
+   "id": "980cec65",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdfbfd28",
+   "id": "1b437b89",
    "metadata": {},
    "source": [
     "And then we just divide by the number of users:"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "838c37ce",
+   "id": "49c310e5",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e0dfec7b",
+   "id": "a9411e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6ee0b8c8",
+   "id": "ab6623cb",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b34cadd0",
+   "id": "e6452f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3fe1145f",
+   "id": "c3d11057",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab727847",
+   "id": "76b1ddef",
    "metadata": {},
    "source": [
     "### Data Scientists You May Know"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320e41bb",
+   "id": "c78f032b",
    "metadata": {},
    "source": [
     "To make a \"People you may know\" suggester we need to find the connection between users. Like a user might know the firends of\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4f0cc01b",
+   "id": "74f8f634",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0e40d9",
+   "id": "54a12b60",
    "metadata": {},
    "source": [
     "It includes user 0 twice, since Hero is indeed friends with both of his\n",
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "49b664e7",
+   "id": "84968c39",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9ff512eb",
+   "id": "58548f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b14524e",
+   "id": "34bcccc0",
    "metadata": {},
    "source": [
     "This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3863ba35",
+   "id": "d848434a",
    "metadata": {},
    "source": [
     "### “substantive expertise”"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4a198a5b",
+   "id": "7f0aa974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd637456",
+   "id": "b17779dc",
    "metadata": {},
    "source": [
     "function that finds users with a certain interest:\n"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bb0f7663",
+   "id": "9791162f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439c3e33",
+   "id": "8d1a6363",
    "metadata": {},
    "source": [
     "This works, but it has to examine the whole list of interests for every\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d27bfdf7",
+   "id": "b7b29630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "07346ca2",
+   "id": "d86e5706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f7d177",
+   "id": "00f725d8",
    "metadata": {},
    "source": [
     "And another from users to interests:\n"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8c69fbdd",
+   "id": "7770cb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b03883",
+   "id": "62a44014",
    "metadata": {},
    "source": [
     "Now it’s easy to find who has the most interests in common with a given\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "df826645",
+   "id": "3a00f920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,28 +631,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "4889317b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'interested_user_id' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43minterested_user_id\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'interested_user_id' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "7e736d0e",
+   "id": "585ae1c4",
    "metadata": {},
    "source": [
     "### Salaries and Experience"
@@ -661,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f2c561d3",
+   "id": "cbd1321f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +659,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5e6d482b",
+   "id": "3d359c1c",
    "metadata": {},
    "source": [
     "![graph.jpg](attachment:graph.jpg)"
@@ -687,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5cc4aa",
+   "id": "4d1eaf3e",
    "metadata": {},
    "source": [
     "It seems clear that people with more experience tend to earn more. Our first idea is to look at the average salary for each tenure."
@@ -696,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f967dea9",
+   "id": "f07c6ae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f6f0b1d9",
+   "id": "a47ea2f6",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7faf4ed6",
+   "id": "403a4560",
    "metadata": {},
    "source": [
     "It might be more helpful to bucket the tenures:\n"
@@ -753,8 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f983b627",
+   "execution_count": 34,
+   "id": "d99ade50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1673a6c1",
+   "id": "f503ad6f",
    "metadata": {},
    "source": [
     "Then we can group together the salaries corresponding to each bucket:\n"
@@ -777,8 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fce838b",
+   "execution_count": 35,
+   "id": "08801ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,9 +771,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cabfa331",
+   "metadata": {},
+   "source": [
+    "And finally compute the average salary for each group:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4f50ce47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keys are tenure buckets, values are average salary for that bucket.\n",
+    "average_salary_by_bucket = {\n",
+    "    tenure_bucket: sum(salaries) / len(salaries)\n",
+    "    for tenure_bucket, salaries in salary_by_tenure_bucket.items()\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "38a928b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'more than five': 79166.66666666667,\n",
+       " 'less than two': 48000.0,\n",
+       " 'between two and five': 61500.0}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_salary_by_bucket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "808beb26",
+   "metadata": {},
+   "source": [
+    "### Paid Accounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2fcca4ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_paid_or_unpaid(years_experience):\n",
+    "    if years_experience < 3.0:\n",
+    "        return \"paid\"\n",
+    "    elif years_experience < 8.5:\n",
+    "        return \"unpaid\"\n",
+    "    else:\n",
+    "        return \"paid\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737a1d47",
+   "id": "23b052a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -801,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "986bf443",
+   "id": "6a08d661",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -809,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab40e58",
+   "id": "4b1d73f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -817,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "900cce10",
+   "id": "8a7099ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -825,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4af5ae7",
+   "id": "a9dd2e37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -833,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f21f1093",
+   "id": "acff63e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -841,47 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b421ce8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e562e0c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd9a2408",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d449702",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cb4a0cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16310104",
+   "id": "91a3314c",
    "metadata": {},
    "outputs": [],
    "source": []
